github_data_collector/src/data/issue_comment/amaneureka_AtomOS.txt
Please i need information

If compile in ubuntu = Version ? 12,14,16,18
Desktop or Server ?
sudo apt install xxxxx ?
the Setup.sh --setup no work 

If compile in Windows = Version 8.1 or 10
cgywin ? version? libs to install in cgywin ?

if possible add in vs 2017 the proyect and use build macros to use libs?

Hello i try compile the solution in windows, not work.
Use vs 2017 cgywin and mono.
when the use build.cmd not work

Try compile in ubuntu 16.04 lts
steps

git clone Atomos
sudo apt-get install build-essential texinfo flex bison
sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
sudo apt install apt-transport-https
echo "deb https://download.mono-project.com/repo/ubuntu stable-xenial main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
sudo apt update

put in command line Setup.sh --setup
first erro in compile automake

cd libs
Execute Build-zlib.sh
erro in compile
Execute Build-pixman.sh
Execute Build-libpng.sh
Execute Build-freetype.sh
Execute Build-cairo.sh

xbuild /p:Configuration=Release ./src/Atomix.sl 
xbuild is obsolte command change for msbuild

execute Build.sh --mono
erro not working
Tried to build AtomOS, got a failure:

cfns.gperf:101:1 error: 'const char* libc_name_p(const char*, unsigned int)' redeclared inline with 'gnu_inline' attribute
Following should be mapped in uncached or at least write back marked pages to decrease latency
- [ ] VBE

_Note: need to complete this list_
A window application that could trace kernel actions would be helpful to debug kernel time to time.
Followed by the issue #36 
- [x] VFS Model
- [ ] Wiki Doc
- [x] Generic FileSystem and Device Mounting
- [ ] Testing
As reported by one of the user, Build is failing on version 4.2.1.0. 

Error: ```UnImplemented Blt_Un```
LLVM provides better optimizations in the backend.  It already has GC support via statepoints.
When I tried the first building step using ```sudo ./Setup.sh --setup``` on MacOS on Sierra. (Btw, I had to install the packages using homebrew instead of apt-get and build-install isn't available so I did it without it...)

```
/Users/USER/Desktop/AtomOS/AtomOS/src/Build/Temp/binutils-2.26/gas/as.c:1013:24: error: 
      'sbrk' is deprecated [-Werror,-Wdeprecated-declarations]
  char *lim = (char *) sbrk (0);
                       ^
/usr/include/unistd.h:587:7: note: 'sbrk' has been explicitly marked
      deprecated here
void    *sbrk(int);
         ^
/Users/USER/Desktop/AtomOS/AtomOS/src/Build/Temp/binutils-2.26/gas/as.c:1156:25: error: 
      'sbrk' is deprecated [-Werror,-Wdeprecated-declarations]
  start_sbrk = (char *) sbrk (0);
                        ^
/usr/include/unistd.h:587:7: note: 'sbrk' has been explicitly marked
      deprecated here
void    *sbrk(int);
         ^
2 errors generated.
make[4]: *** [as.o] Error 1
make[4]: *** Waiting for unfinished jobs....
make[3]: *** [all-recursive] Error 1
make[2]: *** [all] Error 2
make[1]: *** [all-gas] Error 2
make: *** [all] Error 2
Build failed. Please check the logs above to see what went wrong.
```
Hello Aman,
I finally wrote a Coming soon page, because I need some time to develop the final landing page.
 

(C) This website was developed by Xdev31, all rights are reserved.